--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
 
     --fs-400: 0.875rem;
     --fs-500: 1rem;
+    --fs-700: 1.5rem;
+    --fs-800: 2.5rem;
 
     --fw-regular: 400;
     --fw-semi-bold: 500;
@@ -41,4 +43,108 @@ button {
     border: none;
     font: inherit;
     background: inherit;
+}
+
+
+body {
+  font-family: var(--ff-main);
+  font-size: var(--fs-400);
+  font-weight: var(--fw-regular);
+  background-color: var(--clr-neutral-200);
+  padding-block: 1rem;
+}
+
+.container {
+  width: min(85%, 1440px);
+  margin-inline: auto;
+}
+
+h1 {
+  font-size: var(--fs-800);
+  font-weight: var(--fw-bold);
+  color: var(--clr-neutral-700);
+  margin-bottom: 2rem;
+}
+
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  gap: 1.5rem;
+}
+
+picture img {
+  border-radius: .7rem;
+}
+
+.add-to-cart-btn {
+  border: solid 1px;
+  background-color: #ffff;
+  font-weight: var(--fw-semi-bold);
+
+  display: flex;
+  gap: .5rem;
+  align-items: center;
+
+  padding: .5rem 1rem;
+  margin-top: -1.2rem;
+  border-radius: 10rem;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.plate-description {
+  color: var(--clr-neutral-600);
+  margin-bottom: .5rem;
+}
+
+.plate-name {
+  font-size: var(--fs-500);
+  font-weight: var(--fw-bold);
+  color: var(--clr-neutral-700);
+  margin-bottom: .5rem;
+}
+
+.plate-price {
+  color: var(--clr-primary-red);
+  font-weight: var(--fw-bold);
+}
+
+.your-cart {
+  background-color: #ffff;
+  text-align: center;
+  margin-top: 2rem;
+  padding: 1.5rem;
+  border-radius: .7rem;
+}
+
+.your-cart p:first-of-type {
+  color: var(--clr-primary-red);
+  font-size: var(--fs-700);
+  font-weight: var(--fw-bold);
+  text-align: left;
+  margin-bottom: 2.5rem;
+}
+
+.your-cart p:last-of-type {
+  color: var(--clr-neutral-600);
+  font-weight: var(--fw-bold);
+}
+
+.your-cart img {
+  margin-inline: auto;
+  margin-bottom: 1rem;
+}
+
+
+@media (min-width: 950px) {
+  
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 35%;
+    gap: 3rem;
+    align-items: first baseline;
+  }
 }
