--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
 
 * {
     margin: 0;
+    padding: 0;
 }
 
 img,
@@ -43,6 +44,10 @@ button {
     border: none;
     font: inherit;
     background: inherit;
+}
+
+ul {
+  list-style: none;
 }
 
 
